# NikonRag

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  main.py  pyproject.toml
data/: eval_set.json
data/eval/: ragas_details.csv  ragas_summary.json  sample_eval.jsonl  z7ii_tc_eval.jsonl  z7ii_tc_eval_advanced.jsonl
src/: app.py  build_index.py  eval_ragas.py  query.py
src/agent/: rag_agent.py
src/common/: config.py  types.py
src/frontend/: README.md  streamlit_app.py
src/ingestion/: pdf_ingestor.py
src/retrieval/: reranker.py  vector_store.py
tests/: test_citation_parsing.py
